# Pinnacle

./: .coveragerc  .dockerignore  .gitignore  .gitmodules  CHANGELOG.md  CODE_OF_CONDUCT.md  Dockerfile  README.md  README_ja.md  README_zh.md  mypy.ini  output.txt  package-lock.json  pyproject.toml  replace.sh  rq_worker.py  setup.py  snowflake.ipynb  test_error.py
.binder/: postBuild
.github/: config.yml  pull_request_template.md
_component.model.test/: component.json
apidocs/: conf.py
docs/: README.md  cluster.rst  common_issues.md  concepts.rst  conf.py  content.rst  data_references.md  docusaurus.config.js  encoders.md  full_usage.md  full_usage.rst  getting_started.md  getting_started.rst  index.md  index.rst  minimum_working_example.rst  models.md  models.rst  overview.rst  package-lock.json  robots.txt  semantic_indexes.rst  sidebars.js  training.rst  types.rst  vector_index.md  watchers.md  watchers.rst
examples/: README.md  chat_with_your_database.ipynb  llm_finetune.py  mnist_torch.ipynb  multimodal_image_search_clip.ipynb  question_the_docs.ipynb  question_the_docs_opensource.ipynb  sandbox-example.ipynb  snowflake-example.ipynb  sql-example.ipynb  transfer_learning.ipynb  transfer_learning_declarative.ipynb  vector_search.ipynb  video_search.ipynb  voice_memos.ipynb
newdocs/: docusaurus.config.js
notebooks/: Sentiment-analysis-use-case.ipynb  compare-vector-search-solutions.ipynb  compare_vector_search_solutions.ipynb  local-cluster.ipynb  mnist-notebook.ipynb  mnist_clean.ipynb  mnist_sklearn.ipynb  mongo-cdc.ipynb  mongo_cdc.ipynb  multimodal-image-search-clip.ipynb  multimodal_image_search_clip.ipynb  openai.ipynb  parallelization_on_dask.ipynb  semantic-search-openai.ipynb  sentiment_analysis_use_case.ipynb  transfer_learning.ipynb  yondo-training.ipynb  yondo.ipynb
pinnacle/: __init__.py  __main__.py
plugins/: README.md  generate_readme.py
plugins/mongodb/: README.md  pyproject.toml
plugins/mongodb/plugin_test/: __init__.py  conftest.py  test_artifact_store.py  test_atlas.py  test_databackend.py  test_metadata.py  test_mongodb_artifact.py  test_queries.py  test_query.py
plugins/mongodb/superduper_mongodb/: artifacts.py  data_backend.py  database_listener.py  metadata.py  query.py  utils.py  vector_search.py
scripts/: remove_type_ignore.py  rename.sh
superduperdb/: __init__.py  __main__.py  client.py  collection.py  cursor.py  database.py  (+2 more)
(+1793 files in other folders)
